Add missing word

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <title>Morsø LUG</title>
-<p>This is upcoming site for the Morsø Linux User Group</p>
+<p>This is the upcoming site for the Morsø Linux User Group</p>
