--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!doctype html>
 <title>Morsø LUG</title>
+<link rel="stylesheet" href="{{ '/style.css' | url }}" />
 <p>This is the upcoming site for the Morsø Linux User Group</p>
