Add base layout

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!doctype html>
-<title>Morsø LUG</title>
-<link rel="stylesheet" href="{{ '/style.css' | url }}" />
+---
+title: Morsø LUG
+layout: base
+---
+
 <p>This is the upcoming site for the Morsø Linux User Group</p>
