--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ title: Morsø LUG
 layout: base
 ---
 
-<p>This is the upcoming site for the Morsø Linux User Group</p>
+<div class="h-full flex justify-center bg-gray-800 text-white">
+  <h1 class="self-center text-7xl">mLUG</h1>
+</div>
