--- a/medlemmer.html
+++ b/medlemmer.html
@@ -1,4 +1,33 @@
 ---
 title: Medlemmer
 layout: base
+
+people:
+  - name: Jane Doe
+    email: jane@mlug.dk
+  - name: John Doe
+    email: john@mlug.dk
 ---
+
+<div class="mx-auto px-8 container content">
+  <h1 class="mt-12 mb-8 text-4xl font-bold">Medlemmer</h1>
+
+  <div class="flex flex-col gap-y-8">
+    {%- for person in people -%}
+    <div class="flex flex-auto">
+      <img src="https://placehold.co/200x250" class="mr-8" />
+      <div class="flex-1 self-center">
+        <p class="text-xl">{{ person.name }}</p>
+        <p>
+          <a
+            href="mailto:{{ person.email }}"
+            class="hover:underline text-blue-500"
+          >
+            {{ person.email }}
+          </a>
+        </p>
+      </div>
+    </div>
+    {%- endfor -%}
+  </div>
+</div>
