Add `.link` utility

--- a/medlemmer.html
+++ b/medlemmer.html
@@ -19,10 +19,7 @@ people:
       <div class="flex-1 self-center">
         <p class="text-xl">{{ person.name }}</p>
         <p>
-          <a
-            href="mailto:{{ person.email }}"
-            class="hover:underline text-blue-500"
-          >
+          <a href="mailto:{{ person.email }}" class="link">
             {{ person.email }}
           </a>
         </p>
