Front page text updated

--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
 title: Morsø LUG
 layout: base
 ---
+
+Vores formål er at sprede et budskab om Linux og open source / fri software på Mors. Vi vil holder arragementer hvor vi fortæller om hvordan Linux og open source. Derudover vil vi gerne hjælpe folk med at komme i gang med Linux og open source software. Arrangementerne vil være åbne for alle, uanset om du er nybegynder eller erfaren bruger. Vores aktiviteter kommer til bære præg af at være både for nybegyndere og de mere tekniske kyndige, der vil udforske de mere avancerede aspekter af Linux og open source software. Vores håb er at kunne imødekomme alle interesserede og skabe et fællesskab omkring Linux og open source software på Mors.
+
+Foreningens arrangementer holdes på Frøslev Kulturhus i Frøslev. Du bedes se i kalenderen om kommende arragementer.
+
