--- a/medlemmer.html
+++ b/medlemmer.html
@@ -9,7 +9,7 @@ people:
     email: john@mlug.dk
 ---
 
-<div class="mx-auto px-8 container content">
+<div class="mx-auto px-8 container">
   <h1 class="mt-12 mb-8 text-4xl font-bold">Medlemmer</h1>
 
   <div class="flex flex-col gap-y-8">
