--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@ layout: base
 
   <div class="prose">
     <p>
-      Vores formål er at sprede et budskab om Linux og open source / fri
-      software på Mors. Vi vil holder arragementer hvor vi fortæller om hvordan
-      Linux og open source. Derudover vil vi gerne hjælpe folk med at komme i
-      gang med Linux og open source software. Arrangementerne vil være åbne for
-      alle, uanset om du er nybegynder eller erfaren bruger. Vores aktiviteter
-      kommer til bære præg af at være både for nybegyndere og de mere tekniske
-      kyndige, der vil udforske de mere avancerede aspekter af Linux og open
-      source software. Vores håb er at kunne imødekomme alle interesserede og
-      skabe et fællesskab omkring Linux og open source software på Mors.
+      Vores formål er at sprede et budskab om Linux og open source / fri software på Mors.
+      <br>
+Vi holder arragementer hvor vi fortæller om hvordan Linux og open source fungerer. Der ud over vil vi gerne hjælpe nye brugere med at komme i gang med Linux og open source software.
+      <br>
+Arrangementerne i Morsø Linux User Group er åbne for alle interesserede, uanset om du ernybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på opm det kunne være noget for dig.
+Derfor bærer vores aktiviteter også præg af at være både for nybegyndere og de mere tekniske kyndige, der vil udforske de mere avancerede aspekter af Linux og open source software.
+Vi håber at kunne imødekomme alle interesserede og skabe et inkluderende fællesskab omkring Linux og open source software på Mors.
     </p>
-
     <p>
-      Foreningens arrangementer holdes på Frøslev Kulturhus i Frøslev. Du bedes
-      se i kalenderen om kommende arragementer.
+<p>
+Du kan se hvornår vi mødes i kalenderen.
+</p>
+    <p>
+Smid os en mail, hvis du har spørgsmål af nogen art.
     </p>
   </div>
 </div>
