--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@ layout: base
 
   <div class="prose">
     <p>
-      Vores formål er at sprede et budskab om Linux og open source / fri software på Mors.
+      Morsø LUGs formål er at sprede et budskab om Linux og open source / fri software på Mors.
+    </p>
       <br>
+    <p>
 Vi holder arragementer hvor vi fortæller om hvordan Linux og open source fungerer. Der ud over vil vi gerne hjælpe nye brugere med at komme i gang med Linux og open source software.
+    </p>
+    <br>
+    <p>
+Arrangementerne i Morsø Linux User Group er åbne for alle interesserede, uanset om du er nybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på om Linux kunne være noget for dig.
       <br>
-Arrangementerne i Morsø Linux User Group er åbne for alle interesserede, uanset om du ernybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på opm det kunne være noget for dig.
 Derfor bærer vores aktiviteter også præg af at være både for nybegyndere og de mere tekniske kyndige, der vil udforske de mere avancerede aspekter af Linux og open source software.
 Vi håber at kunne imødekomme alle interesserede og skabe et inkluderende fællesskab omkring Linux og open source software på Mors.
     </p>
