--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: base
 
   <div class="prose">
     <p>
-      Morsø LUGs formål er at sprede et budskab om Linux og open source / fri
-      software på Mors.
+      Morsø LUGs formål er at sprede kendskabet til Linux og open source / fri
+      software på Mors, øen midt i Limfjorden.
     </p>
     <p>
       Vi holder arragementer hvor vi fortæller om hvordan Linux og open source
@@ -17,12 +17,12 @@ layout: base
       med Linux og open source software.
     </p>
     <p>
-      Arrangementerne i Morsø Linux User Group er åbne for alle interesserede,
+      Arrangementerne i Morsø Linux User Group finder sted i Frøslev beboerhus, midt på Morsø, og er åbne for alle interesserede,
       uanset om du er nybegynder eller erfaren bruger, eller bare almindeligt
       nysgerrig på om Linux kunne være noget for dig. Derfor bærer vores
       aktiviteter også præg af at være både for nybegyndere og de mere tekniske
       kyndige, der vil udforske de mere avancerede aspekter af Linux og open
-      source software. Vi håber at kunne imødekomme alle interesserede og skabe
+      source software. <br> Vi håber at kunne imødekomme alle interesserede og skabe
       et inkluderende fællesskab omkring Linux og open source software på Mors.
     </p>
     <p>Du kan se hvornår vi mødes i kalenderen.</p>
