--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@ layout: base
       med Linux og open source software.
     </p>
     <p>
-      Arrangementerne i Morsø Linux User Group finder sted i Frøslev beboerhus, midt på Morsø, og er åbne for alle interesserede,
-      uanset om du er nybegynder eller erfaren bruger, eller bare almindeligt
-      nysgerrig på om Linux kunne være noget for dig. Derfor bærer vores
-      aktiviteter også præg af at være både for nybegyndere og de mere tekniske
-      kyndige, der vil udforske de mere avancerede aspekter af Linux og open
-      source software. <br> Vi håber at kunne imødekomme alle interesserede og skabe
-      et inkluderende fællesskab omkring Linux og open source software på Mors.
+      Arrangementerne i Morsø Linux User Group finder sted i Frøslev beboerhus,
+      midt på Morsø, og er åbne for alle interesserede, uanset om du er
+      nybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på om
+      Linux kunne være noget for dig. Derfor bærer vores aktiviteter også præg
+      af at være både for nybegyndere og de mere tekniske kyndige, der vil
+      udforske de mere avancerede aspekter af Linux og open source software.
+      <br />
+      Vi håber at kunne imødekomme alle interesserede og skabe et inkluderende
+      fællesskab omkring Linux og open source software på Mors.
     </p>
     <p>Du kan se hvornår vi mødes i kalenderen.</p>
     <p>Smid os en mail, hvis du har spørgsmål af nogen art.</p>
