Remove forced break

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@ layout: base
       nybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på om
       Linux kunne være noget for dig. Derfor bærer vores aktiviteter også præg
       af at være både for nybegyndere og de mere tekniske kyndige, der vil
-      udforske de mere avancerede aspekter af Linux og open source software.
-      <br />
-      Vi håber at kunne imødekomme alle interesserede og skabe et inkluderende
+      udforske de mere avancerede aspekter af Linux og open source software. Vi
+      håber at kunne imødekomme alle interesserede og skabe et inkluderende
       fællesskab omkring Linux og open source software på Mors.
     </p>
     <p>Du kan se hvornår vi mødes i kalenderen.</p>
