--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 ---
-title: Medlemmer
+title: Kontakt
 layout: base
 
 people:
@@ -10,7 +10,7 @@ people:
 ---
 
 <div class="mx-auto px-8 container">
-  <h1 class="mt-12 mb-8 text-4xl font-bold">Medlemmer</h1>
+  <h1 class="mt-12 mb-8 text-4xl font-bold">Kontakt</h1>
 
   <div class="flex flex-col gap-y-8">
     {%- for person in people -%}
