Remove XL breakpoints and adjust index page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@ layout: base
 ---
 
 <div class="mx-auto px-8 container">
-  <h1 class="mt-12 mb-8 text-4xl font-bold">Velkommen!</h1>
-
-  <div class="prose">
-    <p>
+  <div class="mx-auto mt-12 prose">
+    <p class="lead">
       Morsø LUGs formål er at sprede kendskabet til Linux og open source / fri
       software på Mors, øen midt i Limfjorden.
     </p>
