tilføjet kontakt for undertegnede (eller forsøgt i hvertfald)

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,8 +5,8 @@ layout: base
 people:
   - name: Jane Doe
     email: jane@mlug.dk
-  - name: John Doe
-    email: john@mlug.dk
+  - name: Øjvind Fritjof Arnfred
+    email: fritjof@mlug.dk
 ---
 
 <div class="mx-auto px-8 container">
