--- a/kontakt.html
+++ b/kontakt.html
@@ -1,12 +1,6 @@
 ---
 title: Kontakt
 layout: base
-
-people:
-  - name: Jane Doe
-    email: jane@mlug.dk
-  - name: Øjvind Fritjof Arnfred
-    email: fritjof@mlug.dk
 ---
 
 <div class="mx-auto px-8 container">
@@ -15,7 +9,7 @@ people:
   <div class="flex flex-col gap-y-8">
     {%- for person in people -%}
     <div class="flex flex-auto">
-      <img src="https://placehold.co/200x250" class="mr-8" />
+      <img src="{{ person.image }}" class="mr-8 h-48" />
       <div class="flex-1 self-center">
         <p class="text-xl">{{ person.name }}</p>
         <p>
