--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@ layout: base
   <div class="flex flex-col gap-y-8">
     {%- for person in people -%}
     <div class="flex flex-auto">
-      <img src="{{ person.image }}" class="mr-8 h-48" />
+      <img src="{{ person.image }}" class="mr-8 h-48 w-48" />
       <div class="flex-1 self-center">
         <p class="text-xl">{{ person.name }}</p>
         <p>
