--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@ layout: base
       med Linux og open source software.
     </p>
     <p>
-      Arrangementerne i Morsø Linux User Group finder sted i Frøslev beboerhus,
-      midt på Morsø, og er åbne for alle interesserede, uanset om du er
+      Arrangementerne i Morsø Linux User Group finder sted på Morsø Folkebibliotek og i Frøslev beboerhus,
+      midt på Morsø, og de er åbne for alle interesserede. Så kom forbi uanset om du er
       nybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på om
-      Linux kunne være noget for dig. Derfor bærer vores aktiviteter også præg
+      Linux kunne være noget for dig. Af samme grund bærer vores aktiviteter også præg
       af at være både for nybegyndere og de mere tekniske kyndige, der vil
-      udforske de mere avancerede aspekter af Linux og open source software. Vi
+	udforske de mere avancerede aspekter af Linux og open source software.
+    </p>
+	<p>
+	Vi
       håber at kunne imødekomme alle interesserede og skabe et inkluderende
       fællesskab omkring Linux og open source software på Mors.
     </p>
