--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ layout: base
       med Linux og open source software.
     </p>
     <p>
-      Arrangementerne i Morsø Linux User Group finder sted på Morsø Folkebibliotek og i Frøslev beboerhus,
-      midt på Morsø, og de er åbne for alle interesserede. Så kom forbi uanset om du er
-      nybegynder eller erfaren bruger, eller bare almindeligt nysgerrig på om
-      Linux kunne være noget for dig. Af samme grund bærer vores aktiviteter også præg
-      af at være både for nybegyndere og de mere tekniske kyndige, der vil
-	udforske de mere avancerede aspekter af Linux og open source software.
+      Arrangementerne i Morsø Linux User Group finder sted på Morsø
+      Folkebibliotek og i Frøslev beboerhus, midt på Morsø, og de er åbne for
+      alle interesserede. Så kom forbi uanset om du er nybegynder eller erfaren
+      bruger, eller bare almindeligt nysgerrig på om Linux kunne være noget for
+      dig. Af samme grund bærer vores aktiviteter også præg af at være både for
+      nybegyndere og de mere tekniske kyndige, der vil udforske de mere
+      avancerede aspekter af Linux og open source software.
     </p>
-	<p>
-	Vi
-      håber at kunne imødekomme alle interesserede og skabe et inkluderende
+    <p>
+      Vi håber at kunne imødekomme alle interesserede og skabe et inkluderende
       fællesskab omkring Linux og open source software på Mors.
     </p>
     <p>Du kan se hvornår vi mødes i kalenderen.</p>
