Improve mobile layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Morsø LUG
 layout: base
 ---
 
-<div class="mx-auto px-8 container">
+<div class="mx-auto px-4 md:px-8 container">
   <div class="mx-auto mt-12 prose">
     <p class="lead">
       Morsø LUGs formål er at sprede kendskabet til Linux og open source / fri
