--- a/kalender.html
+++ b/kalender.html
@@ -3,7 +3,7 @@ title: Kalender
 layout: base
 ---
 
-<div class="mx-auto px-8 container">
+<div class="mx-auto px-4 md:px-8 container">
   <h1 class="mt-12 mb-8 text-4xl font-bold">Kalender</h1>
 
   {%- for event in collections.kalender -%}
