--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,7 @@ title: Kontakt
 layout: base
 ---
 
-<div class="mx-auto px-8 container">
+<div class="mx-auto px-4 md:px-8 container">
   <h1 class="mt-12 mb-8 text-4xl font-bold">Kontakt</h1>
 
   <div class="flex flex-col gap-y-8">
