Update main info on meeting place

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: base
     </p>
     <p>
       Arrangementerne i Morsø Linux User Group finder sted på Morsø
-      Folkebibliotek og i Frøslev beboerhus, midt på Morsø, og de er åbne for
+      Folkebibliotek i Nykøbing Mors, og de er åbne for
       alle interesserede. Så kom forbi uanset om du er nybegynder eller erfaren
       bruger, eller bare almindeligt nysgerrig på om Linux kunne være noget for
       dig. Af samme grund bærer vores aktiviteter også præg af at være både for
