Update dependencies and run Prettier

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ layout: base
     </p>
     <p>
       Arrangementerne i Morsø Linux User Group finder sted på Morsø
-      Folkebibliotek i Nykøbing Mors, og de er åbne for
-      alle interesserede. Så kom forbi uanset om du er nybegynder eller erfaren
-      bruger, eller bare almindeligt nysgerrig på om Linux kunne være noget for
-      dig. Af samme grund bærer vores aktiviteter også præg af at være både for
-      nybegyndere og de mere tekniske kyndige, der vil udforske de mere
-      avancerede aspekter af Linux og open source software.
+      Folkebibliotek i Nykøbing Mors, og de er åbne for alle interesserede. Så
+      kom forbi uanset om du er nybegynder eller erfaren bruger, eller bare
+      almindeligt nysgerrig på om Linux kunne være noget for dig. Af samme grund
+      bærer vores aktiviteter også præg af at være både for nybegyndere og de
+      mere tekniske kyndige, der vil udforske de mere avancerede aspekter af
+      Linux og open source software.
     </p>
     <p>
       Vi håber at kunne imødekomme alle interesserede og skabe et inkluderende
