--- a/kalender/2026-02-10-meeting.html
+++ b/kalender/2026-02-10-meeting.html
@@ -8,4 +8,7 @@ place: Morsø Folkebibliotek, Holgersgade, 7900 Nykøbing Mors
 
 <p>Årets første møde efter en hård vinter. Det bliver smadderhyggeligt!</p>
 
-<p>Indgang ved siden af Biblioteket ved Støberisalen. Tag elevator eller brug trappen op til øverste etage."</p>
+<p>
+  Indgang ved siden af Biblioteket ved Støberisalen. Tag elevator eller brug
+  trappen op til øverste etage."
+</p>
