Space out items

--- a/kalender.html
+++ b/kalender.html
@@ -6,23 +6,25 @@ layout: base
 <div class="mx-auto px-4 md:px-8 container">
   <h1 class="mt-12 mb-8 text-4xl font-bold">Kalender</h1>
 
-  {%- for event in collections.kalender -%}
-  <div>
-    <h2 class="text-xl">{{ event.data.title }}</h2>
-    <p>
-      <time class="{{ event.data.date | date: '%Y-%m-%dT%H:%M' }}">
-        {{ event.data.date | date: '%d-%m-%Y %H:%M' }}
-      </time>
-    </p>
-    <p>
-      <a
-        href="https://www.openstreetmap.org/search?query={{ event.data.place | escape }}"
-        class="link"
-      >
-        {{ event.data.place }}
-      </a>
-    </p>
-    <div class="mt-4 prose">{{ event.content }}</div>
+  <div class="space-y-6">
+    {%- for event in collections.kalender -%}
+    <div>
+      <h2 class="text-xl">{{ event.data.title }}</h2>
+      <p>
+        <time class="{{ event.data.date | date: '%Y-%m-%dT%H:%M' }}">
+          {{ event.data.date | date: '%d-%m-%Y %H:%M' }}
+        </time>
+      </p>
+      <p>
+        <a
+          href="https://www.openstreetmap.org/search?query={{ event.data.place | escape }}"
+          class="link"
+        >
+          {{ event.data.place }}
+        </a>
+      </p>
+      <div class="mt-4 prose">{{ event.content }}</div>
+    </div>
+    {%- endfor -%}
   </div>
-  {%- endfor -%}
 </div>
