--- a/kalender.html
+++ b/kalender.html
@@ -7,7 +7,7 @@ layout: base
   <h1 class="mt-12 mb-8 text-4xl font-bold">Kalender</h1>
 
   <div class="space-y-6">
-    {%- for event in collections.kalender -%}
+    {%- for event in collections.kalender reversed -%}
     <div>
       <h2 class="text-xl">{{ event.data.title }}</h2>
       <p>
